# HTTP_server

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: connection.h  http_parser.h  http_response.h  logger.h  router.h  server.h  static_server.h
src/: connection.cpp  http_parser.cpp  http_response.cpp  logger.cpp  main.cpp  router.cpp  server.cpp  static_server.cpp
static/: index.html
